--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
   Last Modified: 21 Apr 2006
   Number: 2
-  Version: 27
+  Version: 28
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -338,7 +338,7 @@ the same performance issues they have in Perl 5.
 
 Built-in object types start with an uppercase letter. This includes
 immutable types (e.g. C<Int>, C<Num>, C<Complex>, C<Rational>, C<Str>,
-C<Bit>, C<Rule>, C<Set>, C<Junction>, C<Code>, B<Block>, C<List>,
+C<Bit>, C<Regex>, C<Set>, C<Junction>, C<Code>, B<Block>, C<List>,
 C<Tuple>), as well as mutable (container) types, such as C<Scalar>,
 C<Array>, C<Hash>, C<Buf>, C<Routine>, C<Module>, etc.
 
@@ -1179,7 +1179,7 @@ Two or more adverbs can always be strung together without intervening
 punctuation anywhere a single adverb is acceptible.  When used as named
 arguments, you may put comma between.  See S06.
 
-The negated form (C<$!a>) and the sigiled forms (C<:$a>, C<:@a>,
+The negated form (C<:!a>) and the sigiled forms (C<:$a>, C<:@a>,
 C<:%a>) never take an argument and don't care what the next character is.
 They are considered complete.
 
@@ -1267,10 +1267,11 @@ New quoting constructs may be declared as macros:
 
     macro quote:<qX> (*%adverbs) {...}
 
-Note: macro adverbs are automatically evaluated at macro call
-time if the adverbs are included in the parse.  If the adverbs are
-to affect the parsing of the quoted text of the macro, then the text must
-be parsed by the body of the macro rather than by an C<is parsed> rule.
+Note: macro adverbs are automatically evaluated at macro call time if
+the adverbs are included in the parse.  If an adverb needs to affect
+the parsing of the quoted text of the macro, then an explicit named
+parameter may be passed on as a parameter to the C<is parsed> subrule,
+or used to select which subrule to invoke.
 
 =item *
 
@@ -1457,7 +1458,7 @@ And so on.
 
 Backslash sequences still interpolate, but there's no longer any C<\v>
 to mean I<vertical tab>, whatever that is...  (C<\v> now match vertical
-whitespace in a rule.)
+whitespace in a regex.)
 
 =item *
 
@@ -1822,11 +1823,11 @@ Here are the current grammatical categories:
     postfix:<++>                                $x++
     circumfix:<[ ]>                             [ @x ]
     postcircumfix:<[ ]>                         $x[$y] or $x .[$y]
-    rule_metachar:<,>                           /,/
-    rule_backslash:<w>                          /\w/ and /\W/
-    rule_assertion:<*>                          /<*stuff>/
-    rule_mod_internal:<perl5>                   m:/ ... :perl5 ... /
-    rule_mod_external:<nth>                     m:nth(3)/ ... /
+    regex_metachar:<,>                          /,/
+    regex_backslash:<w>                         /\w/ and /\W/
+    regex_assertion:<*>                         /<*stuff>/
+    regex_mod_internal:<perl5>                  m:/ ... :perl5 ... /
+    regex_mod_external:<nth>                    m:nth(3)/ ... /
     trait_verb:<handles>                        has $.tail handles <wag>
     trait_auxiliary:<shall>                     my $x shall conform<TR123>
     scope_declarator:<has>                      has $.x;
